--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ print("The optimal value is:", minimax(0, 0, True, values, float('-inf'), float(
 values = [3, 5, 6, 9, 1, 2, 0, -1]
 
 # Call minimax to get the optimal value for the root node (node_index = 0)
-print("The optimal value is:", minimax(0, 0, True, values, float(
+print("The optimal value is:", minimax(0, 0, True, values, float('-inf'), float('inf')))
 
 </textarea>
                 <button onclick="runCode(1)">Run Code</button>
